--- a/LMS-master/LMS/backend/package.json
+++ b/LMS-master/LMS/backend/package.json
@@ -7,7 +7,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js"
+  },
+  "engines": {
+    "node": "18.x"
   },
   "dependencies": {
     "@google/genai": "^1.10.0",
